; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_wc/extr_wc_db.c_wq_fetch_next.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_wc/extr_wc_db.c_wq_fetch_next.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@STMT_DELETE_WORK_ITEM = common dso_local global i32 0, align 4
@STMT_SELECT_WORK_ITEM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32**, %struct.TYPE_3__*, i8*, i32, i32*, i32*)* @wq_fetch_next to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @wq_fetch_next(i32* %0, i32** %1, %struct.TYPE_3__* %2, i8* %3, i32 %4, i32* %5, i32* %6) #0 {
  %8 = alloca i32*, align 8
  %9 = alloca i32**, align 8
  %10 = alloca %struct.TYPE_3__*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32*, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i32*, align 8
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i8*, align 8
  store i32* %0, i32** %8, align 8
  store i32** %1, i32*** %9, align 8
  store %struct.TYPE_3__* %2, %struct.TYPE_3__** %10, align 8
  store i8* %3, i8** %11, align 8
  store i32 %4, i32* %12, align 4
  store i32* %5, i32** %13, align 8
  store i32* %6, i32** %14, align 8
  %19 = load i32, i32* %12, align 4
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %35

21:                                               ; preds = %7
  %22 = load %struct.TYPE_3__*, %struct.TYPE_3__** %10, align 8
  %23 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = load i32, i32* @STMT_DELETE_WORK_ITEM, align 4
  %26 = call i32 @svn_sqlite__get_statement(i32** %15, i32 %24, i32 %25)
  %27 = call i32 @SVN_ERR(i32 %26)
  %28 = load i32*, i32** %15, align 8
  %29 = load i32, i32* %12, align 4
  %30 = call i32 @svn_sqlite__bind_int64(i32* %28, i32 1, i32 %29)
  %31 = call i32 @SVN_ERR(i32 %30)
  %32 = load i32*, i32** %15, align 8
  %33 = call i32 @svn_sqlite__step_done(i32* %32)
  %34 = call i32 @SVN_ERR(i32 %33)
  br label %35

35:                                               ; preds = %21, %7
  %36 = load %struct.TYPE_3__*, %struct.TYPE_3__** %10, align 8
  %37 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %36, i32 0, i32 0
  %38 = load i32, i32* %37, align 4
  %39 = load i32, i32* @STMT_SELECT_WORK_ITEM, align 4
  %40 = call i32 @svn_sqlite__get_statement(i32** %15, i32 %38, i32 %39)
  %41 = call i32 @SVN_ERR(i32 %40)
  %42 = load i32*, i32** %15, align 8
  %43 = call i32 @svn_sqlite__step(i32* %16, i32* %42)
  %44 = call i32 @SVN_ERR(i32 %43)
  %45 = load i32, i32* %16, align 4
  %46 = icmp ne i32 %45, 0
  br i1 %46, label %50, label %47

47:                                               ; preds = %35
  %48 = load i32*, i32** %8, align 8
  store i32 0, i32* %48, align 4
  %49 = load i32**, i32*** %9, align 8
  store i32* null, i32** %49, align 8
  br label %62

50:                                               ; preds = %35
  %51 = load i32*, i32** %15, align 8
  %52 = call i32 @svn_sqlite__column_int64(i32* %51, i32 0)
  %53 = load i32*, i32** %8, align 8
  store i32 %52, i32* %53, align 4
  %54 = load i32*, i32** %15, align 8
  %55 = load i32*, i32** %13, align 8
  %56 = call i8* @svn_sqlite__column_blob(i32* %54, i32 1, i32* %17, i32* %55)
  store i8* %56, i8** %18, align 8
  %57 = load i8*, i8** %18, align 8
  %58 = load i32, i32* %17, align 4
  %59 = load i32*, i32** %13, align 8
  %60 = call i32* @svn_skel__parse(i8* %57, i32 %58, i32* %59)
  %61 = load i32**, i32*** %9, align 8
  store i32* %60, i32** %61, align 8
  br label %62

62:                                               ; preds = %50, %47
  %63 = load i32*, i32** %15, align 8
  %64 = call i32 @svn_sqlite__reset(i32* %63)
  %65 = call i32* @svn_error_trace(i32 %64)
  ret i32* %65
}

declare dso_local i32 @SVN_ERR(i32) #1

declare dso_local i32 @svn_sqlite__get_statement(i32**, i32, i32) #1

declare dso_local i32 @svn_sqlite__bind_int64(i32*, i32, i32) #1

declare dso_local i32 @svn_sqlite__step_done(i32*) #1

declare dso_local i32 @svn_sqlite__step(i32*, i32*) #1

declare dso_local i32 @svn_sqlite__column_int64(i32*, i32) #1

declare dso_local i8* @svn_sqlite__column_blob(i32*, i32, i32*, i32*) #1

declare dso_local i32* @svn_skel__parse(i8*, i32, i32*) #1

declare dso_local i32* @svn_error_trace(i32) #1

declare dso_local i32 @svn_sqlite__reset(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
